# camera-connect

./: .gitignore  audio_player.py  build_deb.sh  config.ini  config.py  glide_api.py  glide_api_models.py  glideapi.py  main.py  play.py  pyproject.toml  snapshotter.py  triggerer.py  uploader.py
.github/workflows/: build-deb-arm64.yml
packaging/deb/: camera-connect.service  conffiles  config.ini  control.in  postinst  prerm
